# SM-Cereal

./: AMBuildScript  AMBuilder  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/: cereal_archiver.h  extension.h  smsdk_config.h
src/: cereal_natives.cpp  extension.cpp
